# gn_toolchain_sample

./: .gitignore  .gitmodules  BUILD.gn  README.md  README_zh.md
.github/workflows/: autobuild.yml  linux.yml  macos.yml  windows.yml
src/: BUILD.gn  console_application.cc  shared_library.cc  shared_library.h  shared_library_user.cc  static_library.cc  static_library.h  static_library_user.cc
src/cmake/: CMakeLists.txt  cmake.cc
src/mac/dynamic_library/: BUILD.gn  dynamic_library.cc  dynamic_library.h  dynamic_library_user.cc
src/mac/ns_application/: BUILD.gn  Info.plist  Main.m  MainWindow.h  MainWindow.m
src/mac/objc_console_application/: BUILD.gn  main.m
src/win/win32_application/: BUILD.gn  main.cc  res.rc
