group("all") {
  deps = [
     "//src:static_library",
     "//src:static_library_user",
     "//src:shared_library",
     "//src:shared_library_user",
     "//src:console_application",
  ]

  if (is_mac) {
    deps += [
      "//src/mac/objc_console_application",
      "//src/mac/ns_application",
      "//src/mac/dynamic_library",
    ]
  }

  if (is_win) {
    deps += [
      "//src/win/win32_application",
    ]
  }
}
