static_library("static_library") {
  sources = [
    "static_library.cc",
    "static_library.h",
  ]
}

console_app("static_library_user") {
  sources = [ "static_library_user.cc" ]
  deps = [ ":static_library" ]
}

shared_library("shared_library") {
  defines = [ "SHARED_LIBRARY_EXPORTING" ]
  sources = [
    "shared_library.cc",
    "shared_library.h",
  ]
}

console_app("shared_library_user") {
  sources = [ "shared_library_user.cc" ]
  deps = [ ":shared_library" ]
}

console_app("console_application") {
  sources = [ "console_application.cc" ]
}
